--- a/ssm_plugin/get_yumlist.yml
+++ b/ssm_plugin/get_yumlist.yml
@@ -1,6 +1,6 @@
 ---
 - hosts: all
-  gather_facts: False
+  # gather_facts: False
 
   tasks:
     - name: List yum packages and register result to output later.
